--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,57 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const fifteen = inventors.filter((inventor)=> (inventor.year >= 1500) && ( inventor.year < 1600));
+    console.table(fifteen);
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-
+    const fullName = inventors.map(inventor => `${inventor.first} ${inventor.last}`)
+    console.table(fullName);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    const ordered = inventors.sort((first, second) => first.year > second.year ? 1 : -1);
+    console.table(ordered);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
-
+    const totalLife = inventors.reduce((total, inventor) => {return total + (inventor.passed - inventor.year)}, 0);
+    console.log(totalLife);
     // 5. Sort the inventors by years lived
+    const yearsSorted = inventors.sort((first, second) => {
+        return (first.passed - first.year ) > (second.passed - second.year) ? -1 : 1
+    })
+    console.table(yearsSorted);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+      // const category = document.querySelector('.mw-category');
+      // const links = Array.from(category.querySelectorAll('a'));
 
-
+      // const de = links
+      //         .map(link => link.textContent)
+      //         .filter(streetName => streetName.includes("de"));
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const lastSort = people.sort((last, next) => {
+      const [alast, afirst] = last.split(', ');
+      const [blast, bfirst] = next.split(', ');
+      return alast > blast ? 1 : -1;
+    })
+
+    console.log(lastSort);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const occurance = data.reduce((obj, item) => {
+      if (!obj[item]) {
+        obj[item] = 0;
+      } 
+      obj[item] ++;
+      return obj;
+    }, {});
+
+    console.log(occurance);
 
   </script>
 </body>
